--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".RoommateSearchActivity"
+            android:name=".roommate.RoommateSearchActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
