--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".NoticeListActivity"
+            android:name=".notice.NoticeListActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".NoteListActivity"
+            android:name=".note.NoteListActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
